# -cau-eclass-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.sample.json  execute_tool.py  pyproject.toml
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: basic_usage.py  claude_code_setup.md
src/cau_eclass_mcp/: __init__.py  __main__.py  auth.py  cau_on_client.py  server.py
src/cau_eclass_mcp/parsers/: __init__.py  announcements.py  assignments.py  dashboard.py  materials.py
src/cau_eclass_mcp/utils/: __init__.py  cache.py  credentials.py  credentials.py.bak
tests/: __init__.py  test_auth.py  test_integration.py
